--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ header {
     margin: auto;
 }
 
+header > div > div {
+    width: 50%;
+    margin: auto;
+
+}
+
 header > div > div> h1 {
     font-size: 48px;
     font-weight: 900;
@@ -70,10 +76,8 @@ header > div > div> h1 {
     align-items: center;
     background-color: #888888;
     min-height: 200px;
-    min-width: 400px;
     font-size: 12px;
     color: #fff;
-    
 }
 
 nav > ul, nav > ul > li, nav > ul > li > a {
@@ -206,4 +210,15 @@ button {
     font-weight: 400;
     padding: 0px;
     margin: 0px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+    padding: 20px 0px;
 }
