--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header {
     padding: 100px 0px;
     width: 80%;
     margin: auto;
+    gap: 20px;
 }
 
 header > div > div {
@@ -68,6 +69,7 @@ header > div > div> h1 {
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
+    margin: 0px;
 }
 
 .header-img {
@@ -78,6 +80,7 @@ header > div > div> h1 {
     min-height: 200px;
     font-size: 12px;
     color: #fff;
+    
 }
 
 nav > ul, nav > ul > li, nav > ul > li > a {
@@ -126,14 +129,18 @@ button {
     display: flex;
     flex-direction: column;
     width: 20%;
+    margin-bottom: 100px;
+    text-align: center;
 }
 .img-border {
     display: flex;
-    border: 2px solid #3882f6;
+    border: 4px solid #3882f6;
     border-radius: 12px;
     padding: 10px;
-    height: 150px;
-    width: 150px;
+    
+    aspect-ratio: 1/1;
+    margin: 0px;
+    
 }
 
 .quote-section {
@@ -141,6 +148,7 @@ button {
     background-color: #e5e7eb;
     color: #1f2937;
     font-size: 36px;
+    padding: 100px 0px;
 }
 .quote {
     display: flex;
