--- a/style.css
+++ b/style.css
@@ -1,25 +1,3 @@
-/* 
-background-color: #1f2937;
-font-size: 48px;
-font-weight: extra-bold;
-
-font-size: 18px;
-color: #e5e7eb;
-
-font-size: 24px;
-color: #f9faf8;
-
-background-color: #3882f6;
-
-font-size: 36px;
-font-weight: extra-bold;
-color: #1f2937;
-
-background-color: #e5e7eb;
-font-size: 36px;
-font-weight: italic;
-color: #1f2937;
-*/
 body {
     padding : 0px;
     margin: 0px;
@@ -34,35 +12,14 @@ header {
     background-color: #1f2937;
 }
 
-.header {
+.topheader {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0px;
     width: 80%;
-    margin: auto;
-}
-
-.hero {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 100px 0px;
-    width: 80%;
-    margin: auto;
-    gap: 20px;
-}
-
-header > div > div {
-    width: 50%;
-    margin: auto;
-
-}
-
-header > div > div> h1 {
-    font-size: 48px;
-    font-weight: 900;
-    color: #e5e7eb;
+    margin: 0px;
+    margin-inline: auto;
 }
 
 .logo {
@@ -70,17 +27,6 @@ header > div > div> h1 {
     color: #f9faf8;
     font-weight: bold;
     margin: 0px;
-}
-
-.header-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #888888;
-    min-height: 200px;
-    font-size: 12px;
-    color: #fff;
-    
 }
 
 nav > ul, nav > ul > li, nav > ul > li > a {
@@ -95,6 +41,47 @@ nav > ul {
     display: flex;
     gap: 20px;
 }
+
+.hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 0px;
+    width: 80%;
+    height:300px;
+    margin: 0px;
+    margin-inline: auto;
+}
+
+.hero > div {
+    width: 50%;
+    margin: 0px;
+    margin-inline: auto;
+    height: 100%;
+
+}
+.header-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #888888;
+    min-height: 200px;
+    font-size: 12px;
+    color: #fff;
+    margin: 0px;
+}
+
+header > div > div > h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #e5e7eb;
+    margin: 0px;
+    padding-right: 20px;
+}
+header > div > div > p {
+    padding-right: 20px;
+}
+
 button {
     background-color: #3882f6;
     font-weight: 600;
@@ -141,6 +128,12 @@ button {
     aspect-ratio: 1/1;
     margin: 0px;
     
+}
+.img-border > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
 }
 
 .quote-section {
